set fixed height for navigation links
final navigation item now is not cut off in firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ header {
 .nav-link {
 	display: block;
     padding: 8px 0;
+    height: 15px;
     text-decoration: none;
     color: black;
 }
